--- a/ex28/Makefile
+++ b/ex28/Makefile
@@ -11,7 +11,7 @@ TESTS=$(patsubst %.c,%,$(TEST_SRC))
 TARGET=build/libYOUR_LIBRARY.a
 SO_TARGET=$(patsubst %.a,%.so,$(TARGET))
 
-#The Target build
+# The Target Build
 all: $(TARGET) $(SO_TARGET) tests
 
 dev: CFLAGS=-g -Wall -Isrc -Wall -Wextra $(OPTFLAGS)
@@ -26,10 +26,10 @@ $(SO_TARGET): $(TARGET) $(OBJECTS)
        $(CC) -shared -o $@ $(OBJECTS)
 
 build:
-		@mkdir -p build
-		@mkdir -p bin
+       @mkdir -p build
+       @mkdir -p bin
 
-#The Unit tests
+# The Unit Tests
 .PHONY: tests
 tests: CFLAGS += $(TARGET)
 tests: $(TESTS)
@@ -38,19 +38,19 @@ tests: $(TESTS)
 valgrind:
        VALGRIND="valgrind --log-file=/tmp/valgrind-%p.log" $(MAKE)
 
-#The Cleaner
+# The Cleaner
 clean:
-		rm -rf build $(OBJECTS) $(TESTS)
-		rm -f tests/tests.log
-		find . -name "*.gc*" -exec rm {} \;
-		rm -rf `find. -name "*.dSYM" -print`
+       rm -rf build $(OBJECTS) $(TESTS)
+       rm -f tests/tests.log
+       find . -name "*.gc*" -exec rm {} \;
+       rm -rf `find . -name "*.dSYM" -print`
 
-#The Install
+# The Install
 install: all
-		install -d $(DESTDIR)/$(PREFIX)/lib/
-		install $(TARGET) $(DESTDIR)/$(PREFIX)/lib/
+       install -d $(DESTDIR)/$(PREFIX)/lib/
+       install $(TARGET) $(DESTDIR)/$(PREFIX)/lib/
 
-#The Checker
+# The Checker
 BADFUNCS='[^_.>a-zA-Z0-9](str(n?cpy|n?cat|xfrm|n?dup|str|pbrk|tok|_)|stpn?cpy|a?sn?printf|byte_)'
 check:
        @echo Files with potentially dangerous functions.
